--- a/chap1.tex
+++ b/chap1.tex
@@ -19,7 +19,7 @@
 	This system is also called a \termdef{linear autonomous system}.
 \end{definition}
 
-We will use the matrix form, as it is a very compact way of describing the system.
+We will use the matrix form, as it is a very compact way of describing such a system.
 
 To express the solution of a linear autonomous system in a similarly compact way, we will establish the notion of the matrix exponential.
 
@@ -40,7 +40,7 @@ For this definition to make sense, we need to show that the series converges for
 
 \begin{lemma}
 \label{lem:frobNormProperties}
-	The Frobenius norm satisfies the following statements for any matrices $A$, $B$, $C\in \K^{n \times m}$, $D\in\K^{m\times o}$ and any scalar $\alpha \in \K$.
+	The Frobenius norm satisfies the following statements for any matrices $A$, $B$, $C\in \K^{n \times m}$, $D\in\K^{m\times r}$ and any scalar $\alpha \in \K$.
 	\begin{enumerate}
 		\item $\norm{A+B}_F\leq\norm{A}_F+\norm{B}_F\ ,$
 		\item $\norm{\alpha A}_F=\abs{\alpha}\norm{A}_F\ ,$
@@ -50,16 +50,17 @@ For this definition to make sense, we need to show that the series converges for
 \end{lemma}
 
 \begin{proof}
-	The first three points can be simply shown using the definition of the Frobenius form and the properties of the absolute value. 
+	The first three points can be simply shown using the definition of the Frobenius form and properties of the absolute value. 
 
 	The fourth point follows from the Cauchy–Schwarz inequality 
-	$$\norm{CD}^2_F=\sum^m_{i=1}\sum^o_{j=1}\norm{c_id_j}_2^2 \leq \sum^m_{i=1}\sum^o_{j=1}\norm{c_i}_2^2\norm{d_j}_2^2=\sum^m_{i=1}\norm{c_i}_2^2\sum^o_{j=1}\norm{d_j}_2^2=\norm{C}^2_F\norm{D}^2_F\ ,$$
+	$$\norm{CD}^2_F=\sum^m_{i=1}\sum^r_{j=1}\norm{c_id_j}_2^2 \leq \sum^m_{i=1}\sum^r_{j=1}\norm{c_i}_2^2\norm{d_j}_2^2=\sum^m_{i=1}\norm{c_i}_2^2\sum^r_{j=1}\norm{d_j}_2^2=\norm{C}^2_F\norm{D}^2_F\ ,$$
 	where $\norm*{\cdot}_2$ denotes the Euclidean norm, and $c_i,d_i$ denote the $i$-th column of the matrices $C$ and $D$ respectively.
 \end{proof}
 
 \begin{lemma}
 \label{lem:elementAbsoluteSize}
-	The absolute value of any element of a matrix is always less than or equal to the Frobenius norm of the matrix. In particular, for a matrix $A^k=(a_{i,j}^{(k)})_{n\times n}$, where $A\in\K^{n\times n}$, it holds for every position $(i,j)$ that $\abs*{a_{i,j}^{(k)}}\leq\norm*{A^k}_F\leq\norm{A}^k_F$.
+	The absolute value of any element of a matrix is always less than or equal to the Frobenius norm of the matrix. In particular, for a matrix \linebreak $A^k=(a_{i,j}^{(k)})_{n\times n}$, where $A\in\K^{n\times n}$, it holds for every position $(i,j)$ that 
+	$$\abs*{a_{i,j}^{(k)}}\leq\norm*{A^k}_F\leq\norm{A}^k_F.$$
 \end{lemma}
 
 \begin{proof}
@@ -67,7 +68,7 @@ For this definition to make sense, we need to show that the series converges for
 	$$\abs*{x_{i,j}}\leq \sqrt{\sum^n_{i=1}\sum^m_{j=1}\abs*{x_{i,j}}^2}=\norm{X}_F\ .$$
 	It follows 
 	$$\abs*{a_{i,j}^{(k)}}\leq\norm*{A^k}_F\leq\norm{A}^k_F\ ,$$
-	where the second inequality follows from the fourth point of Lemma \ref{lem:frobNormProperties}.
+	where the second inequality follows from the repeated use of the fourth point of Lemma \ref{lem:frobNormProperties}.
 \end{proof}
 
 \begin{cor}
@@ -77,9 +78,9 @@ For this definition to make sense, we need to show that the series converges for
 
 \begin{proof}
 	By Lemma \ref{lem:elementAbsoluteSize}, for any $N\in\N$, we have
-	$$\sum^N_{k=0}\abs{\frac{b^k}{k!}a_{i,j}^{(k)}}\leq\sum^N_{k=0}\frac{\abs{b}^k}{k!}\abs{a_{i,j}^{(k)}}\leq\sum^N_{k=0}\frac{\abs{b}^k}{k!}\norm{A}_F^{k}=\sum^N_{k=0}\frac{\norm{bA}_F^k}{k}\ .$$
+	$$\sum^N_{k=0}\abs{\frac{b^k}{k!}a_{i,j}^{(k)}}\leq\sum^N_{k=0}\frac{\abs{b}^k}{k!}\abs{a_{i,j}^{(k)}}\leq\sum^N_{k=0}\frac{\abs{b}^k}{k!}\norm{A}_F^{k}=\sum^N_{k=0}\frac{\norm{bA}_F^k}{k!}\ .$$
 	Then 
-	$$\sum^\infty_{k=0}\abs{\frac{b^k}{k!}a_{i,j}^{(k)}}=\lim_{N\to\infty}\sum^N_{k=0}\abs{\frac{b^k}{k!}a_{i,j}^{(k)}}\leq\lim_{N\to\infty}\sum^N_{k=0}\frac{\norm{bA}_F^k}{k}=\sum^\infty_{k=0}\frac{\norm{bA}_F^k}{k}=e^{\norm{bA}_F}\ .$$
+	$$\sum^\infty_{k=0}\abs{\frac{b^k}{k!}a_{i,j}^{(k)}}=\lim_{N\to\infty}\sum^N_{k=0}\abs{\frac{b^k}{k!}a_{i,j}^{(k)}}\leq\lim_{N\to\infty}\sum^N_{k=0}\frac{\norm{bA}_F^k}{k!}=\sum^\infty_{k=0}\frac{\norm{bA}_F^k}{k!}=e^{\norm{bA}_F}\ .$$
 \end{proof}
 
 \begin{definition}
@@ -88,7 +89,7 @@ For this definition to make sense, we need to show that the series converges for
 
 \begin{lemma}
 \label{lem:elementwiseConvergence}
-	A matrix sequence $\{A_k=(a^{(k)}_{i,j})_{n\times m}\}_{k=0}^\infty$ converges to a matrix $A=(a_{i,j})_{n\times m}$ if and only if it converges elementwise, in other words $$\forall i\in\{1,\ldots,n\}\quad\forall j\in\{1,\ldots,m\} : a^{(k)}_{i,j}\xrightarrow{k\rightarrow\infty}a_{i,j}\ .$$
+	A matrix sequence $\{A_k=(a^{(k)}_{i,j})_{n\times m}\}_{k=0}^\infty$ converges to a matrix \linebreak $A=(a_{i,j})_{n\times m}$ if and only if it converges elementwise, in other words $$\forall i\in\{1,\ldots,n\}\quad\forall j\in\{1,\ldots,m\} : a^{(k)}_{i,j}\xrightarrow{k\rightarrow\infty}a_{i,j}\ .$$
 \end{lemma}
 
 \begin{proof}
@@ -109,14 +110,14 @@ For this definition to make sense, we need to show that the series converges for
 
 \begin{lemma}
 \label{lem:matrixSeriesFactoring}
-	Let $\{A_k\}_{k=0}^\infty$ be a matrix sequence, where $A_k\in\K^{n\times m}$, and let $B\in\K^{r\times n}$, $C\in\K^{m\times s}$. If $\sum^\infty_{k=0}A_k$ converges, then also $\sum^\infty_{k=0}BA_kC$ converges, and the following equality holds
-	$$B\left(\sum^\infty_{k=0}A_k\right)C=\sum^\infty_{k=0}BA_kC\ .$$
+	Let $\{A_k\}_{k=0}^\infty$ be a matrix sequence, where $A_k\in\K^{n\times m}$, and let $B\in\K^{r\times n}$, $C\in\K^{m\times s}$. If $\sum^\infty_{k=0}A_k$ converges, then also $\sum^\infty_{k=0}BA_kC$ converges, and the following equality holds:
+	$$\sum^\infty_{k=0}BA_kC=B\left(\sum^\infty_{k=0}A_k\right)C\ .$$
 \end{lemma}
 
 \begin{proof}
-	We know that for $N\in\N$ it is true
+	We know that for any $N\in\N$ it is true
 	$$\sum^N_{k=0}BA_kC=B\left(\sum^N_{k=0}A_k\right)C\ .$$
-	We want to now show that the left hand side converges to $B\left(\sum^\infty_{k=0}A_k\right)C$. Let $\varepsilon_1\in\R^+$ be fixed. Since the series $\sum^\infty_{k=0}A^k$ converges, we can find $N_0$ such that for every $N\in\N,N\geq N_0$ it holds 
+	We want to now show that the left hand side converges to $B\left(\sum^\infty_{k=0}A_k\right)C$ for $N\rightarrow\infty$. Let $\varepsilon_1\in\R^+$ be fixed. Since the series $\sum^\infty_{k=0}A^k$ converges, we can find $N_0$ such that for every $N\in\N,N\geq N_0$ it holds 
 	$$\norm{\sum^\infty_{k=0}A_k-\sum^N_{l=0}A_l}<\varepsilon_1\ .$$
 	Then 
 	\begin{align*}
@@ -139,7 +140,7 @@ For this definition to make sense, we need to show that the series converges for
 	Let $A$, $B$ and $X$ be real or complex $n\times n$ matrices. Then 
 	\begin{enumerate}
 		\item if $AB = BA$, then $e^{A}B = Be^{A}$,
-		\item if $R$ is invertible, then $e^{R^{-1}XR}=R^{-1}e^XR$,
+		\item if $R$ is an invertible $n\times n$ matrix, then $e^{R^{-1}XR}=R^{-1}e^XR$,
 		\item $\frac{d}{dt}e^{tX}=Xe^{tX}$, for $t \in \R$,
 		\item if $AB = BA$, then $e^{A+B} = e^{A}e^B$.
 	\end{enumerate}
@@ -158,7 +159,7 @@ For this definition to make sense, we need to show that the series converges for
 
 		\item The elements of the matrix $e^{tX}=\sum^\infty_{k=0}\frac{t^k}{k!}X^{k}=(e_{i,j}(t))_{n\times n}$ are equal to
 		$$e_{i,j}(t)=\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}\ ,$$
-		where $X^k=(a^{(k)}_{i,j})_{n\times n}$. By Corollary \ref{cor:elementConvergence} the series $\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}$ is absolutely convergent for every $t\in\K$. We can now differentiate the individual elements \citep[see][Věta 8.2.2]{Pick}.
+		where $X^k=(a^{(k)}_{i,j})_{n\times n}$. By Corollary \ref{cor:elementConvergence} the series $\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}$ is absolutely convergent for every $t\in\R$. We can now differentiate the individual elements \citep[see][Věta 8.2.2]{Pick}.
 		$$\frac{d}{dt}e_{i,j}(t)=\frac{d}{dt}\sum^\infty_{k=0}\frac{t^k}{k!}a^{(k)}_{i,j}=\sum^\infty_{k=1}\frac{t^{k-1}}{(k-1)!}a^{(k)}_{i,j}=\sum^\infty_{k=0}\frac{t^{k}}{k!}a^{(k+1)}_{i,j}\ .$$ 
 		Using Lemma \ref{lem:matrixSeriesFactoring} we get the desired result
 		\begin{longeq}
@@ -171,7 +172,7 @@ For this definition to make sense, we need to show that the series converges for
 			&=\sum^\infty_{k=0}\frac{1}{k!}(A+B)^{k}
 			=\sum^\infty_{k=0}\sum^k_{l=0}\binom{k}{l}\frac{1}{k!}A^{l}B^{k-l}=\sum^\infty_{k=0}\sum^k_{l=0}\frac{1}{l!(k-l)!}A^{l}B^{k-l}
 			\\
-			&=\left(\sum^\infty_{k=0}\sum^k_{l=0}\frac{1}{l!(k-l)!}\alpha^{(l,k-l)}\right)_{n\times n}
+			&=\left(\sum^\infty_{k=0}\sum^k_{l=0}\frac{1}{l!(k-l)!}\alpha^{(l,k-l)}_{i,j}\right)_{n\times n}
 			=\left(\sum^\infty_{k=0}\sum^\infty_{l=0}\frac{1}{k!l!}\alpha^{(k,l)}_{i,j}\right)_{n\times n}
 			\\
 			&=\sum^\infty_{k=0}\sum^\infty_{l=0}\frac{1}{k!l!}A^kB^l
@@ -226,7 +227,7 @@ Now, using the properties in Lemma \ref{lem:expprop}, we can see that $\dot{x}(t
 Typically, we require the autonomous system to stabilize itself back into its stable state after some disturbances.
 
 \begin{definition}
-	The linear autonomous system $\dot{x}(t)=Ax(t)$ is \termdef{stable}, if for any initial state $x(0)\in\K^n$ the system converges to $\nullvector$ for $t\to\infty$.
+	The linear autonomous system $\dot{x}(t)=Ax(t)$ is \termdef{stable}, if for any initial state $x(0)\in\K^n$ the state vector $x(t)$ converges to $\nullvector$ for $t\to\infty$.
 \end{definition}
 
 Let $A$ be a real or complex matrix. Then there is a regular matrix $R\in \K^{n\times n}$ such that the matrix
@@ -241,7 +242,8 @@ Therefore, by Claim \ref{claim:uniqueness}, the unique solution is
 $$y(t)=e^{tJ}y(0)\ .$$
 It is sufficient to determine when $y(t)$ converges to \nullvector, because since $R$ is an invertible matrix, $x(t)$ converges to $\nullvector$ if and only if $y(t)$ converges to $\nullvector$.
 
-We know that every Jordan block $J_{\lambda,n}$ in the matrix $J$ is of the form $J_{\lambda,n}=\lambda I_n+N_n$, $n \in\N$, where $N_n$ is the $n \times n$ nilpotent matrix satisfying $n_{i,j}=\delta_{i,j-1}$. For example, in case of $n=4$ we have
+We know that every Jordan block $J_{\lambda,n}$ in the matrix $J$ is of the form \linebreak $J_{\lambda,n}=\lambda I_n+N_n$, $n \in\N$, where $N_n=\left(n_{i,j}\right)_{n\times n}$ is the nilpotent matrix satisfying $n_{i,j}=\delta_{i,j-1}$. 
+It is also true that $(N_n)^k_{i,j}=\delta_{i,j-k}$ and $(N_n)^n=O_{n \times n}$, since every right multiplication by the matrix $N$ shifts the multiplied matrix's columns to the right by one column, that is, it maps matrix $(v_1,\ldots,v_n)$ onto $(\nullvector,v_1,\ldots,v_{n-1})$. For example, in case of $n=4$ we have
 \begin{equation*}
 	N_4=
 	\begin{pmatrix}
@@ -266,11 +268,10 @@ We know that every Jordan block $J_{\lambda,n}$ in the matrix $J$ is of the form
 	\end{pmatrix}
 	.
 \end{equation*}
-It is also true that $(N_n)^k_{i,j}=\delta_{i,j-k}$ and $(N_n)^n=O_{n \times n}$, since every right multiplication by the matrix $N$ shifts the multiplied matrix's columns to the right by one column, that is, it maps matrix $(v_1,\ldots,v_n)$ onto $(\nullvector,v_1,\ldots,v_{n-1})$. 
 
-By Lemma \ref{lem:expprop}, for each Jordan block $J_{\lambda,n}$, we now have
-$$e^{tJ_{\lambda,n}}=e^{t(\lambda I + N)}=e^{t\lambda I}e^{tN}=e^{\lambda t}e^{tN}\ .$$
-Let $\lambda = a+ib$ where $a$,$b \in \R$. Then we have
+By Lemma \ref{lem:expprop}, for each Jordan block $J_{\lambda,n}$, we have
+$$e^{tJ_{\lambda,n}}=e^{t(\lambda I_n + N_n)}=e^{t\lambda I_n}e^{tN}=e^{\lambda t}e^{tN_n}\ .$$
+Let $\lambda = a+ib$ where $a$,$b \in \R$, then
 $$e^{tJ_{\lambda,n}}=e^{at}e^{ibt}e^{tN}\ .$$
 We know that $|e^{ibt}|=1$ and that
 $$e^{tN}=\sum^\infty_{k=0}\frac{t^k}{k!}N^k=\sum^{n-1}_{k=0}\frac{t^k}{k!}N^k$$
@@ -297,7 +298,7 @@ Since any block diagonal matrix to the power of any natural number preserves its
 	\end{pmatrix}
 	,
 \end{equation*}
-where the zeroes in the matrices represent zero matrices of appropriate sizes. Therefore, since $y(0)$ is a constant vector, we see that $y(t)=e^{tJ}y(0)$ converges to $\nullvector$ if (and only if, because of the uniqueness of the solution) all the eigenvalues $\lambda_i$ of the matrix $A$ have negative real parts. As the last step, we calculate $x(t)=Ry(t)$ and $x(0)=Ry(0)$. We formulate this result into a theorem.
+where the zeroes in the matrices represent zero matrices of appropriate sizes. Therefore, since $y(0)$ is a constant vector, we see that $y(t)=e^{tJ}y(0)$ converges to $\nullvector$ if (and only if, because of the uniqueness of the solution) all the eigenvalues $\lambda_i$ of the matrix $A$ have negative real parts. As the last step, we calculate $x(t)=Ry(t)$ and $x(0)=Ry(0)$. Let us formulate this result into a theorem.
 
 \begin{theorem}
 \label{theorem:stability}
@@ -314,14 +315,14 @@ where the zeroes in the matrices represent zero matrices of appropriate sizes. T
 
 In a general case, this is called an \termdef{open-loop control} system because the control is not dependent on the previous state of the system.
 
-We can imagine this system as follows. The first part of the right-hand side, $Ax(t)$, of the equation $\dot{x}(t)=Ax(t)+Bu(t)$ can be thought of as the model of the machine or the event that we want to control and the second part, $Bu(t)$, as our control mechanism. The $B$ matrix is then our ``control board'' and the control vector $u(t)$ is us deciding, which ``levers'' and ``buttons'' we want to push. 
+We can imagine such a system as follows. The first summand of the right-hand side, $Ax(t)$, of the equation $\dot{x}(t)=Ax(t)+Bu(t)$ can be thought of as the model of the machine or the event that we want to control and the second summand, $Bu(t)$, as our control mechanism. The $B$ matrix fulfils the role of a ``control board'' and the control vector $u(t)$ is us deciding, which ``levers'' and ``buttons'' we want to push. 
 
 Of course, if we want this system to be self-regulating, we cannot input our own values into $u(t)$, and therefore $u(t)$ has to be calculated from the current state of our system.
 
 \begin{definition}
 	Let us have a linear differential system with the control $u(t)$ defined as
 	$$u(t)=Fx(t)\ ,$$
-	where $F\in\C^{m\times n}$ is a \termdef{feedback matrix}. This system is then called a \termdef{closed-loop control} system or a \termdef{linear feedback control} system.
+	where $F\in\K^{m\times n}$ is a \termdef{feedback matrix}. This system is then called a \termdef{closed-loop control} system or a \termdef{linear feedback control} system.
 
 	For short, we will call this system the $(A,B,F)$ system.
 \end{definition}
@@ -333,10 +334,10 @@ $$\dot{x}(t)=Ax(t)+BFx(t)=(A+BF)x(t)\ .$$
 	The linear feedback system $(A,B,F)$ is \termdef{stable}, if the linear autonomous system $\dot{x}(t)=(A+BF)x(t)$ is stable.
 \end{definition}
 
-By Theorem \ref{theorem:stability}, we now know that the system is stable (converges to $\nullvector$ for $t\to\infty$) if all eigenvalues of the matrix $A+BF$ have negative real parts. Therefore, we are left to provide a suitable feedback matrix $F \in \C^{n \times n}$. This requirement can also be expressed through the characteristic polynomial of the matrix $A~+~BF$, since the roots of the characteristic polynomial of a matrix are precisely eigenvalues of the matrix.
+By Theorem \ref{theorem:stability}, we now know that an $(A,B,F)$ system is stable if all eigenvalues of the matrix $A+BF$ have negative real parts. Therefore, we are left to provide a suitable feedback matrix $F \in \K^{n \times n}$. This requirement can also be expressed through the characteristic polynomial of the matrix $A~+~BF$, since the roots of the characteristic polynomial of a matrix are precisely eigenvalues of the matrix.
 
 \begin{definition}
-	Let $A$ be a $n\times n$ matrix. Then the \termdef{characteristic polynomial} of A, denoted by $\chi_A$, is defined as $$\chi_A(s)=\textnormal{det}(sI_n-A)\ .$$
+	Let $A$ be a $n\times n$ matrix. Then the \termdef{characteristic polynomial}~of~$A$, denoted by $\chi_A$, is defined as $$\chi_A(s)=\textnormal{det}(sI_n-A)\ .$$
 \end{definition}
 
 Through our observations we got to a conclusion, that we need to find a feedback matrix $F$ such that the characteristic polynomial of the matrix $A+BF$ is $$\chi_{A+BF}=(x-\lambda_1)(x-\lambda_2)\cdots(x-\lambda_n)\ ,$$ where all its roots $\lambda_1,\lambda_2,\ldots,\lambda_n \in \C$ have negative real parts. This leads to an important definition.
@@ -355,7 +356,7 @@ In this section we will establish the notion of controllability. We will first e
 
 Let us have a continuous dynamic system $\dot{x}(t)=A_1x(t)$, where $A_1$ is a real or complex square matrix. We \textit{discretize} the time, that is, instead of using continuous real-time values of $x(t)$ and $\dot{x}(t)$, we are interested in these values only at discrete \textit{sampling times} $0,\delta,2\delta,\ldots,k\delta,\ldots$ where $\delta\in\R^+$. We will denote the states at each sampling time as
 $$x_k=x(k\delta)\ ,k\in\N_0\ .$$
-The solution of this system is by Theorem \ref{claim:uniqueness} precisely $x(t)=e^{tA_1}x(0)$. For some $k\in\N$ we get $x_k=x(k\delta)=e^{k\delta A_1}x(0)$. Using the fourth point of Lemma \ref{lem:expprop} we obtain 
+The solution of this system is by Theorem \ref{claim:uniqueness} precisely $x(t)=e^{tA_1}x(0)$. For some fixed $k\in\N$ we get $x_k=x(k\delta)=e^{k\delta A_1}x(0)$. Using the fourth point of Lemma \ref{lem:expprop} we obtain 
 \begin{align*}
 	x_{k+1}
 	&=e^{(k+1)\delta A_1}x(0) \\
@@ -367,7 +368,7 @@ The solution of this system is by Theorem \ref{claim:uniqueness} precisely $x(t)
 by choosing $A=e^{\delta A_1}$. We see that the value of $x$ at the sample time $k$ can be calculated from its previous value. We will now define such a system. The definition holds for any field $\K$.
 
 \begin{definition}
-	A \termdef{discrete dynamic linear system} is a system of equations
+	Let $\K$ be a field. A \termdef{discrete dynamic linear system} is a system of equations
 	$$x_{k+1}=Ax_k,\ k\in\N_0\ ,$$
 	where $x_k\in \K^n$ is a \termdef{state vector} (\termdef{state} for short) of the system and the matrix $A\in \K^{n\times n}$ is a \termdef{fundamental matrix} of the system. The \termdef{initial condition} of the system is the state $x(0)$.
 \end{definition}
@@ -375,7 +376,7 @@ by choosing $A=e^{\delta A_1}$. We see that the value of $x$ at the sample time 
 Similarly, we can define a discrete dynamic linear system with control.
 
 \begin{definition}
-	A \termdef{discrete dynamic linear system with control u} is a system of equations
+	Let $\K$ be a field. A \termdef{discrete dynamic linear system with control u} is a system of equations
 	$$x_{k+1}=Ax_k+Bu_k,\ k\in\N_0\ ,$$
 	where $x_k\in\K^n$ is a \termdef{state vector} (\termdef{state} for short) of the system, $A\in\K^{n\times n}$ is a fundamental matrix, $B\in\K^{n\times m}$ is a control matrix and $u_k\in\K^m$ is a control vector. The \termdef{initial condition} of the system is the state $x_0$.
 
@@ -383,18 +384,18 @@ Similarly, we can define a discrete dynamic linear system with control.
 \end{definition}
 
 \begin{definition}
-	We say that a state $x$ can be \termdef{reached} in a time $k\in\N_0$ if there exists such a sequence of control vectors $u_0,u_1,\ldots,u_{k-1}$ that for the initial condition $x_0=\nullvector$ we get $x=x_k$.
+	Let $(A,B)$ be a discrete system. We say that a state $x$ can be \termdef{reached} in a time $k\in\N_0$ if there exists such a sequence of control vectors $u_0,u_1,\ldots,u_{k-1}$ that for the initial condition $x_0=\nullvector$ we get $x=x_k$.
 \end{definition}
 
 \sloppy
-States that we can reach in time $k\in\N$ in open-loop control discrete-time systems can be derived as follows. The initial condition is $x_0=\nullvector$ and we can choose arbitrary $u_0,u_1,\ldots,u_k$. Then for $k=1$ we have 
+States that can be reached in time $k\in\N$ in open-loop control discrete-time systems can be derived as follows. The initial condition is $x_0=\nullvector$ and we can choose arbitrary $u_0,u_1,\ldots,u_{k-1}$. Then for $k=1$ we have 
 $$x_1=Ax_0+Bu_0=Bu_0 \in \text{Im}B\ .$$
 For $k=2$ we get
 $$x_2=Ax_1+Bu_1=ABu_0+Bu_1\in\text{Im}(AB|B)\ .$$
-It is clear, that for every $k\in\N$
+It is clear, that for every $k\in\N$ it holds
 $$x_k\in\text{Im}(A^{k-1}B|\cdots|AB|B)\ .$$
-We can observe that
-$$\text{Im}(B|AB|\cdots|A^kB) \subseteq \text{Im}(B|AB|\cdots|A^{k+1}B),\ \forall k\in\N\ .$$
+For every $k\in\N$ it is also true that
+$$\text{Im}(B|AB|\cdots|A^kB) \subseteq \text{Im}(B|AB|\cdots|A^{k+1}B)\ .$$
 By the Cayley–Hamilton theorem we know that $\chi_A(A)=O_{n\times n}$. That means, that $A^n$ can be expressed as a linear combination of the matrices $\{I,A,\ldots,A^{n-1}\}$ which implies that $A^nB$ can be expressed as a linear combination of the matrices $\{B,AB,\ldots,A^{n-1}B\}$. We now see that $$\text{Im}(B|AB|\cdots|A^{n}B) \subseteq \text{Im}(B|AB|\cdots|A^{n-1}B)\ .$$
 It follows
 \begin{equation}
@@ -403,10 +404,14 @@ It follows
 \end{equation}
 For an arbitrary $k\in\N,k>n$ we have $$A^kB=A^{k-n}A^nB=A^{k-n}\sum^{n-1}_{i=0}\alpha_i A^iB=\sum^{n-1}_{i=0}\alpha_i A^{k-n+i}B\in\text{Im}(B|AB|\ldots|A^{k-1}B)\ ,$$
 for some $\alpha_0,\ldots,\alpha_{n-1}\in\K$.
-Therefore, all the states we could reach in any time $k\in\N$ are already in the space 
+Therefore, by induction, all the states we could reach in any time $k\in\N$ are already in the space 
 $$\text{Im}(B|AB|\cdots|A^{n-1}B)\ .$$
 \begin{definition}
-	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. The matrix $$\mathbf{R}(A,B)=(B|AB|\cdots|A^{n-1}B)$$ is called the \termdef{rechability matrix} of $(A,B)$. We define the \termdef{reachable space} $\mathcal{R}(A,B)$ of the pair $(A,B)$ as $\text{Im}(B|AB|\cdots|A^{n-1}B)$. 
+	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. The matrix $$\mathbf{R}(A,B)=(B|AB|\cdots|A^{n-1}B)$$ is called the \termdef{rechability matrix} of $(A,B)$. We define the \termdef{reachable space} $\mathcal{R}(A,B)$ of the pair $(A,B)$ as $\text{Im}(\mathbf{R}(A,B))$. 
+\end{definition}
+TODODO
+\begin{definition}
+	Let $\K$ be a field, $\mathcal{V} \subseteq \K^n$ be a vector space and let $A\in\K^{m\times n}$. Then we define the product of the left multiplication of the space $\mathcal{V}$ by the matrix $A$ as the set $A\cdot\mathcal{V}=A\mathcal{V}=\{Av|v\in\mathcal{V}\}$.
 \end{definition}
 
 We have seen that by left multiplying $\mathcal{R}(A,B)$ by $A$, we get a subspace which is already included in $\mathcal{R}(A,B)$. This leads to an important property of some subspaces.
@@ -426,7 +431,7 @@ We have seen that by left multiplying $\mathcal{R}(A,B)$ by $A$, we get a subspa
 	It follows from the discussion above.
 \end{proof}
 
-This leads us to an important property of the pair $(A,B)$. We want to be able to get the system into any state in the state space by controlling it with our control $u$, i.e., choosing an appropriate sequence $u_0,\ldots,u_{n-1}$. Therefore, we desire that $\mathcal{R}(A,B)=\K^n$. An equivalent condition is $\text{dim}\mathcal{R}(A,B)=n$.
+This leads us to an important property of the pair $(A,B)$. We want to be able to get the system into any state by controlling it with our control $u$, i.e., choosing an appropriate sequence $u_0,\ldots,u_{n-1}$. Therefore, we desire that $\mathcal{R}(A,B)=\K^n$. An equivalent condition is $\text{dim}\mathcal{R}(A,B)=n$.
 
 \begin{definition}
 	Let $\K$ be a field and let $A \in \K^{n \times n}$, $B \in \K^{n \times m}$, $n,m \in \N$. The pair $(A,B)$ is \termdef{controllable} if $\textnormal{dim}\mathcal{R}(A,B)=n$.
@@ -438,7 +443,7 @@ This leads us to an important property of the pair $(A,B)$. We want to be able t
 	In this section we assume, that $\K$ is a field of either real or complex numbers and that $A\in\K^{n\times n}$, $B\in\K^{n\times m}$.
 \end{remark}
 
-We will now show that the condition for controllability of \textit{discrete-time systems} also characterizes controllable \textit{continuous-time systems}. For this we have to express the solution of such system using the matrices $A^iB$ for $i\in \N_0$.
+We will now show that the condition for controllability of discrete-time systems also characterizes controllable continuous-time systems. In order to prove this idea, we will express the solution of such a system as a linear combination of the matrices $A^iB$, for $i\in \N_0$.
 
 \begin{definition}
 	Let us have a vector function $v(t)\colon\R\to\K^n$. Then the definite integral of the function on an interval $[a,b]$, $a,b\in\R$ is
@@ -460,15 +465,15 @@ We utilize the matrix exponential in solving the inhomogeneous linear system $\d
 	e^{-tA}\dot{x}(t)-e^{-tA}Ax(t) &=e^{-tA}Bu(t) \\
 	\frac{d}{dt} (e^{-tA}x(t)) &=e^{-tA}Bu(t)\ .
 \end{align*}
-Note that we used Lemma \ref{lem:matrixTimesVectorDerivative} and the fact that $-AA=A(-A)\Rightarrow e^{-tA}A=Ae^{-tA}$ from Lemma \ref{lem:expprop}. After integrating both sides with respect to $t$ on interval $(t_0,t_1)$ we obtain
+Note that we used Lemma \ref{lem:matrixTimesVectorDerivative} and the equality $e^{-tA}A=Ae^{-tA}$, following from the first point of Lemma \ref{lem:expprop}. After integrating both sides with respect to $t$ on interval $(t_0,t_1)$ we obtain
 \begin{align*}
 	[e^{-tA}x(t)]^{t_1}_{t_0}&=\int^{t_1}_{t_0}e^{-tA}Bu(t)dt \\
 	e^{-t_1A}x(t_1)-e^{-t_0A}x(t_0)&=\int^{t_1}_{t_0}e^{-tA}Bu(t)dt \\
 	x(t_1)&=e^{(t_1-t_0)A}x(t_0)+\int^{t_1}_{t_0}e^{(t_1-t)A}Bu(t)dt\ .
 \end{align*}
-The last integral makes sense since $u(t)$ is required to be continuous.
+The integral makes sense since $u(t)$ is required to be continuous.
 
-Now it is clear that in the system where $x(0)=\nullvector$, every state in time $t\in \R^+$ can be expressed as
+Now it is clear that in the system where $x(0)=\nullvector$, the state in time $t\in \R^+$ is equal to
 \begin{equation}
 \label{eq:coolVzorec}
 	x(t)=\int^t_0 e^{(t-s)A}Bu(s)ds\ .
@@ -524,8 +529,19 @@ Now it is clear that in the system where $x(0)=\nullvector$, every state in time
 	where $v^{(k)}(t)=\int^t_0(t-s)^ku(s)ds$ is a vector of length $m$. Therefore, we have 
 	$$x(t)=\sum^\infty_{k=0}\frac{1}{k!}A^kBv^{(k)}(t)=\sum^\infty_{k=0}\frac{1}{k!}A^kB\int^t_0(t-s)^ku(s)ds\ .$$
 	By the Cayley-Hamilton theorem it then holds
-	$$x(t)=\sum^\infty_{i=0}\frac{1}{i!}A^iBv^{(i)}(t)=\sum^\infty_{i=0}\sum^{n-1}_{j=0}\frac{1}{i!}\alpha_{i,j}A^jBv^{(i)}(t)=\sum^{n-1}_{j=0}\left(\sum^\infty_{i=0}\frac{1}{i!}\alpha_{i,j}\right)A^jBv^{(i)}(t)\ .$$
-	The third equality follows from the absolute convergence of the resulting series, which can be shown in a similar way as above. 
+	\begin{align*}
+		x(t)
+		&=\sum^\infty_{k=0}\frac{1}{k!}A^kBv^{(k)}(t)
+		=\sum^\infty_{k=0}\frac{1}{k!}\left(\sum^{n-1}_{j=0}\alpha_{k,j}A^j\right)Bv^{(k)}(t)
+		\\
+		&=\sum^\infty_{k=0}\sum^{n-1}_{j=0}\frac{1}{k!}\alpha_{k,j}A^jBv^{(k)}(t)
+		=\sum^{n-1}_{j=0}\sum^\infty_{k=0}\frac{1}{k!}\alpha_{k,j}A^jBv^{(k)}(t)
+		\\
+		&=\sum^{n-1}_{j=0}\sum^\infty_{k=0}A^jB\left(\frac{1}{k!}\alpha_{k,j}v^{(k)}(t)\right)
+		=\sum^{n-1}_{j=0}A^jB\sum^\infty_{k=0}\left(\frac{1}{k!}\alpha_{k,j}v^{(k)}(t)\right)
+		\ .
+	\end{align*}
+	The fourth equality follows from the absolute convergence of the resulting series, which can be shown in a similar way as above. 
 
 	Now we see that $$x(t) \in \text{Im}(B|AB|\ldots|A^{n-1}B)=\mathcal{R}(A,B)\ .$$ 
 	
@@ -533,7 +549,7 @@ Now it is clear that in the system where $x(0)=\nullvector$, every state in time
 
 	For the proof of the ``if'' part we use \citet[Theorem 3]{Sontag1998}.
 
-	Conversely, if controllability fails, then there exists a non-trivial complement $\mathcal{S}$ to the reachable space $\mathcal{R}$. For any time $t\in\R^+$ and any vector $\rho\in\mathcal{S}$ it holds that $\rho^\ast x(t)=\nullvector$. By choosing the control $u(t)=B^\ast e^{(t-s)A^\ast}\rho$ on the interval $[0,s]$, which is continuous, we get by the equation (\ref{eq:coolVzorec})
+	Conversely, if controllability fails, then there exists a non-trivial complement $\mathcal{S}$ to the reachable space $\mathcal{R}$. For any time $t\in\R^+$ and any vector $\rho\in\mathcal{S}$ it holds that $\rho^\ast x(t)=\nullvector$. By choosing the control $u(t)=B^\ast e^{(t-s)A^\ast}\rho$, which is continuous, on the interval $[0,s]$, we get by the equation (\ref{eq:coolVzorec})
 	$$\nullvector=\rho^\ast x(t)=\int^t_0\rho^\ast e^{(t-s)A}BB^\ast e^{(t-s)A^\ast}\rho ds=\int^t_0\norm{B^\ast e^{(t-s)A^\ast}\rho}^2\ .$$
 	This implies
 	$$0=\norm{B^\ast e^{(t-s)A^\ast}\rho}^2=\norm{\rho^\ast e^{(t-s)A}B}^2$$
@@ -567,7 +583,7 @@ If $(A,B)$ is not controllable, then there exists a part of the state space that
 
 \begin{theorem}
 	\label{theorem:decomp}
-	Let $(A,B)$ represent a dynamic system and let $\text{dim}\mathcal{R}(A,B)=r\leq n$. Then there exists an invertible $n\times n$ matrix $T$ over $\K$ such that the matrices $\widetilde{A}:=T^{-1}AT$ and $\widetilde{B}:=T^{-1}B$ have the block structures 
+	Let $\K$ be a field, $(A,B)$ be a dynamic system over $\K$ and let $\text{dim}\mathcal{R}(A,B)=r\leq n$. Then there exists an invertible $n\times n$ matrix $T$ over $\K$ such that the matrices $\widetilde{A}:=T^{-1}AT$ and $\widetilde{B}:=T^{-1}B$ have the block structures 
 	\begin{equation}
 		\label{eq:decomp}
 		\widetilde{A}=
@@ -598,7 +614,7 @@ If $(A,B)$ is not controllable, then there exists a part of the state space that
 We achieved the new form of matrices $A$ and $B$ by changing the basis of our state space. We now define the relation between $(A,B)$ and $(\widetilde{A},\widetilde{B}).$
 
 \begin{definition}
-	Let $(A,B)$ and $(\widetilde{A},\widetilde{B})$ be pairs as the ones described in Theorem \ref{theorem:decomp} above. Then $(A,B)$ \termdef{is similar to} $(\widetilde{A},\widetilde{B})$, denoted $(A,B) \sim (\widetilde{A},\widetilde{B})$, if there exists an invertible matrix $T$ for which it holds that
+	Let $(A,B)$ and $(\widetilde{A},\widetilde{B})$ be pairs as the ones described in Theorem \ref{theorem:decomp}. Then $(A,B)$ \termdef{is similar to} $(\widetilde{A},\widetilde{B})$, denoted $(A,B) \sim (\widetilde{A},\widetilde{B})$, if there exists an invertible matrix $T$ for which it holds that
 	$$\widetilde{A}=T^{-1}AT\quad and\quad\widetilde{B}=T^{-1}B\ .$$
 \end{definition}
 
@@ -628,7 +644,7 @@ We achieved the new form of matrices $A$ and $B$ by changing the basis of our st
 	where $\widetilde{F}=FT$. It follows from Lemma \ref{lem:simMatrices} that $$\chi_{A+BF}=\chi_{\widetilde{A}+\widetilde{B}\widetilde{F}}\ .$$
 \end{proof}
 
-Theorem \ref{theorem:decomp} has the following interesting consequence. Let $(A,B)$ be a dynamic system with initial condition $x(0)=\nullvector$, and let $T$ be a regular matrix over $\K$ as in Theorem \ref{theorem:decomp}. By putting $x(t)=Ty(t)$ we change the basis and get 
+Theorem \ref{theorem:decomp} has the following interesting consequence. Let $(A,B)$ be a dynamic system with the initial condition $x(0)=\nullvector$, and let $T$ be a regular matrix over $\K$ as in Theorem \ref{theorem:decomp}. By putting $x(t)=Ty(t)$ we get 
 $$T\dot{y}(t)=ATy(t)+Bu(t)\ ,$$ 
 which can be rewriten as 
 $$\dot{y}(t)=T^{-1}ATy(t)+T^{-1}Bu(t)=\widetilde{A}y(t)+\widetilde{B}u(t)\ .$$ 
@@ -647,7 +663,7 @@ It is also true that the system $(A_1,B_1)$ from Theorem \ref{theorem:decomp} is
 \end{lemma}
 
 \begin{proof}
-	We know that $\text{dim}\mathcal{R}(A,B)=r$. We desire that $\text{dim}\mathcal{R}(A_1,B_1)=r$. We will show that $\mathcal{R}(\widetilde{A},\widetilde{B})=\mathcal{R}(A,B)$ and that each vector in $\mathcal{R}(\widetilde{A},\widetilde{B})$ has its last $n-r$ elements equal to 0. Therefore, $\mathcal{R}(\widetilde{A},\widetilde{B})$ restricted to its first $r$ coordinates is equal to $\mathcal{R}(A_1,B_1)$. 
+	We know that $\text{dim}\mathcal{R}(A,B)=r$. We desire that $\text{dim}\mathcal{R}(A_1,B_1)=r$. We will show that $\text{dim}\mathcal{R}(A,B)=\text{dim}\mathcal{R}(\widetilde{A},\widetilde{B})=\text{dim}\mathcal{R}(A_1,B_1)$. 
 	First, we have 
 	\begin{align*}
 		\mathcal{R}(\widetilde{A},\widetilde{B})&=\text{Im}(\widetilde{A}^{n-1}\widetilde{B}|\cdots|\widetilde{A}\widetilde{B}|\widetilde{B}) \\
@@ -658,12 +674,12 @@ It is also true that the system $(A_1,B_1)$ from Theorem \ref{theorem:decomp} is
 		&=T^{-1}\cdot\{(A^{n-1}B|\cdots|AB|B)\cdot v | v \in \K^{n\cdot m}\} \\
 		&=T^{-1}\cdot(\text{Im}(A^{n-1}B|\cdots|AB|B)) \\
 		&=T^{-1}\cdot(\mathcal{R}(A,B))
-		\ ,
+		\ .
 	\end{align*}
-	where the mapping $\cdot\colon\K^{n\times m}\times V\rightarrow W$, where $V$, $W$ are vector spaces, is defined as $A\cdot V=\{Av|v\in V\}$. Since $T$ is an invertible matrix, which preserves linear independence, we have
+	Since $T$ is an invertible matrix, which preserves linear independence, we have
 	$$\text{dim}\mathcal{R}(\widetilde{A},\widetilde{B})=\text{dim}(T^{-1}\mathcal{R}(A,B))=\text{dim}(\mathcal{R}(A,B))=r\ .$$
 
-	Now let us focus on the structure of $\mathcal{R}(\widetilde{A},\widetilde{B})$. We know that the last $n-r$ rows of $\widetilde{B}$ are $\nullvector$. Also, because of the structure of $\widetilde{A}$, for an arbitrary matrix $X\in\K^{r\times m}$ we have that 
+	Now let us focus on the structure of $\mathcal{R}(\widetilde{A},\widetilde{B})$. We know that the last $n-r$ rows of $\widetilde{B}$ are equal to $\nullvector$. Also, because of the structure of $\widetilde{A}$, for an arbitrary matrix $X\in\K^{r\times m}$ we have that 
 	\begin{equation*}
 		\widetilde{A}
 		\begin{pmatrix}
@@ -715,7 +731,7 @@ It is also true that the system $(A_1,B_1)$ from Theorem \ref{theorem:decomp} is
         \end{pmatrix}\ .
     \end{equation*}
 	
-	By the equation (\ref{eq:cayleHamilReachable}) we have that the restriction to the first $r$ coordinates of $\mathcal{R}(\widetilde{A},\widetilde{B})$ is equal to $\mathcal{R}(A_1,B_1)$. Finally, it follows that
+	By the equality (\ref{eq:cayleHamilReachable}) we have that the restriction to the first $r$ coordinates of $\mathcal{R}(\widetilde{A},\widetilde{B})$ is equal to $\mathcal{R}(A_1,B_1)$. Finally, it follows that
 	$$\text{dim}\mathcal{R}(A_1,B_1)=\text{dim}\mathcal{R}(\widetilde{A},\widetilde{B})=\text{dim}\mathcal{R}(A,B)=r\ .$$
 \end{proof}
 
