--- a/chap2.tex
+++ b/chap2.tex
@@ -77,9 +77,9 @@ The following chapter is based on the first section of the fifth chapter of \cit
         1 \\ 0 \\ 0 \\ \vdots \\ 0
     \end{pmatrix}\ .$$
     The characteristic polynomial of the matrix $A^\dagger$ is the same as the one of the matrix $A^\flat$ since transposing a matrix preserves its characteristic polynomial. Therefore, by Cayley-Hamilton theorem and by Lemma \ref{lem:flatCharPol}, it holds that
-    $$O=\chi_{A^\dagger}(A)=\chi_{A^\flat}(A)=A^n-\alpha_nA^{n-1}-\ldots-\alpha_2A-\alpha_1\ ,$$
+    $$O=\chi_{A^\dagger}(A)=\chi_{A^\flat}(A)=A^n-\alpha_nA^{n-1}-\ldots-\alpha_2A-\alpha_1I_n\ ,$$
     implying
-    $$A^n=\alpha_nA^{n-1}+\ldots+\alpha_2A+\alpha_1\ .$$
+    $$A^n=\alpha_nA^{n-1}+\ldots+\alpha_2A+\alpha_1I_n\ .$$
     It then follows 
     $$\mathbf{R}(A,b)A^\dagger=
         \begin{pmatrix} 
@@ -150,8 +150,8 @@ The following chapter is based on the first section of the fifth chapter of \cit
     We see that any assignable polynomial is a multiple of the uncontrollable part $\chi_u$.
 
     Conversely, we want to show that the first factor can be made arbitrary by a suitable choice of $F_1$. This makes sense only for $r>0$, otherwise the assignable polynomial is equal to $\chi_u$, which cannot be changed by modifying the matrix $F$. Assume that we are given a monic polynomial $\chi$. If we find such a matrix $F_1$ that 
-    $$\chi_{A_1+B_1F_1}=\chi$$
-    then by putting $F=(F_1,0)$ we get the desired characteristic polynomial, that is, $\chi_{A+BF}=\chi\chi_u$. Since the pair $(A_1,B_1)$ is controllable as shown in Lemma \ref{lem:A_1B_1controllable}, it is sufficient only to prove that controllable systems can be assigned an arbitrary monic polynomial $\chi$ of respective degree. Therefore, from this point on, we assume that the pair $(A,B)$ is controllable.
+    $$\chi_{A_1+B_1F_1}=\chi\ ,$$
+    then by putting $F=(F_1,0)$ we get the desired characteristic polynomial, that is, $\chi_{A+BF}=\chi\chi_u$. Since the pair $(A_1,B_1)$ is controllable as shown in Lemma~\ref{lem:A_1B_1controllable}, it is sufficient only to prove that controllable systems can be assigned an arbitrary monic polynomial $\chi$ of respective degree. Hence, from this point on, we assume that the pair $(A,B)$ is controllable.
 
     We will first prove the theorem for $m=1$ and then we will generalize it. That will conclude the proof.
 
@@ -193,7 +193,7 @@ The following chapter is based on the first section of the fifth chapter of \cit
             \alpha_1+f_1 & \alpha_2+f_2 & \alpha_3+f_3 & \ldots & \alpha_n+f_n
         \end{pmatrix}\ .
     \end{align*}
-    One can see that given a monic polynomial
+    Following from Lemma \ref{lem:flatCharPol}, one can see that given a monic polynomial
     $$\chi=s^n-\beta_ns^{n-1}-\ldots-\beta_2s-\beta_1\ ,$$
     we can choose
     $$f=\begin{pmatrix}
@@ -201,18 +201,18 @@ The following chapter is based on the first section of the fifth chapter of \cit
     \end{pmatrix}\ ,$$
     and the equality $\chi_{A+bf}=\chi$ will be satisfied. We have shown that for the case where $m=1$, the controllable pair $(A,b)$ can be assigned an arbitrary monic polynomial of degree $n$.
 
-    For the general case, where $m$ is arbitrary, we choose any vector $v\in\K^m$ such that $Bv\neq \nullvector$ and let $b=Bv$. TODODODO We will use the fact that for any matrix $G\in\K^{m\times n}$ the pair $(A+BG,b)$ can be assigned the same polynomials as the pair $(A,B)$, because for any $f\in\K^{1\times n}$ it holds
+    For the case where $m>1$, we choose any vector $v\in\K^m$ satisfying that $Bv\neq \nullvector$ and put $b=Bv$. For any $f\in\K^{1\times n}$ and for any matrix $G\in\K^{m\times n}$, it then holds
     $${A+BG+bf}={A+BG+Bvf}={A+B(G+vf)}$$
-    and therefore, for $F=G+vf$ we have 
+    and therefore, if we put $F=G+vf$, we obtain 
     $$\chi_{A+BG+bf}=\chi_{A+BF}\ .$$
-    Using the result for $m=1$, the proof will be concluded by showing that the pair $(A+BG,b)$ is controllable.
+    This implies that any polynomial that can be assigned to the pair $(A+BG,b)$ can also be assigned to the pair $(A,B)$. Since we have proved the theorem for a controllable pair where $m=1$, the proof will be concluded by showing that there exists such a matrix $G$ that the pair $(A+BG,b)$ is controllable.
        
-    Let us have a sequence of linearly independent vectors $\{Bv=x_1,\ldots,x_k\}$, $x_i\in\K^n$, where
+    Let us have a sequence of linearly independent vectors $Bv=x_1,\ldots,x_k$, of length $n$, where
     \begin{equation}
     \label{eq:indSeq}
-        x_{i}=Ax_{i-1}+Bu_{i-1},\ i\in\{1,\ldots,k\}
+        x_{i}=Ax_{i-1}+Bu_{i-1},\ i\in\{2,\ldots,k\}
     \end{equation}
-    for some $u_i\in\K^m$, and $x_0=\nullvector$, and assume that $k$ is as large as possible. We denote $\text{Im}(x_1,\ldots,x_k)$ by $\mathcal{V}$. By maximality of $k$ we have $x_{k+1}\in\mathcal{V}$, which implies that
+    for some $u_i\in\K^m$, and assume that $k$ is as large as possible. We denote the span of $\{x_1,\ldots,x_k\}$ by $\mathcal{V}$. By the maximality of $k$ we have $x_{k+1}\in\mathcal{V}$, which implies that
     \begin{equation}
     \label{eq:inV}    
         Ax_k+Bu=x_{k+1}\in\mathcal{V}
@@ -226,7 +226,7 @@ The following chapter is based on the first section of the fifth chapter of \cit
     $$Bu=x_{k+1}-Ax_k\in\mathcal{V}\ ,$$
     which implies that the column space $\mathcal{B}=\text{Im}B$ is included in $\mathcal{V}$. Following from this and the equality (\ref{eq:indSeq}), we have 
     $$Ax_{i-1}=x_i-Bu_{i-1}\in\mathcal{V}$$
-    for $i\in\{1,\ldots,k\}$. This result together with the equation (\ref{eq:AxkinV}) shows that for any $i\in\{1,\ldots,k\}$ it is true that $Ax_i\in\mathcal{V}$. This means, that $\mathcal{V}$ is an $A$-invariant subspace containing $\mathcal{B}$. Using these two facts and the fact that for any two matrices $A_{n\times m},B_{m\times o}$ it holds that $A(\text{Im}(B))\stackrel{def.}{=\joinrel=}\{Av|v\in\text{Im(B)}\}=\text{Im}(AB)$, one can see that 
+    for $i\in\{2,\ldots,k\}$. This result together with the equation (\ref{eq:AxkinV}) shows that for any $i\in\{1,\ldots,k\}$ it is true that $Ax_i\in\mathcal{V}$. This means, that $\mathcal{V}$ is an $A$-invariant subspace containing $\mathcal{B}$. Using these two facts one can see that 
     \begin{align*}
         \mathcal{B}&\subseteq\mathcal{V} \\
         A\mathcal{B}&\subseteq A\mathcal{V}\subseteq\mathcal{V} \\
@@ -237,16 +237,13 @@ The following chapter is based on the first section of the fifth chapter of \cit
     \end{align*}
     Therefore, it holds
     $$\mathcal{R}(A,B)=\text{Im}(B|AB|A^2B|\ldots|A^{n-1}B)\subseteq\mathcal{V}\ .$$
-    By controllability of $\mathcal{R}(A,B)$, we obtain
+    By the controllability of the pair $(A,B)$, we obtain
     $$n=\text{dim}\mathcal{R}(A,B)\leq\text{dim}\mathcal{V}=k\leq\text{dim}\K^n=n\ .$$
     This implies that $k=n$, $\mathcal{V}=\K^n$.
 
-    Finally, we need to show that
-    $$\text{dim}\mathcal{R}(A+BG,x_1)=n\ .$$
-
-    Let us define a linear mapping $g\colon\mathcal{V}\to\mathcal{B}\subset \mathcal{V}$ by the equation $g(x_i)=u_i$ for every $i\in\{1,\dots,n-1\}$, where $u_i$ is  such an element that $Ax_i+Bu_i=x_{i+1}$. This definition is correct and unique since the vectors $v_i$ form a basis of $\mathcal{V}$ \citep[see][Tvrzení 6.4]{Barto}. Let $G$ be the matrix of the linear mapping $g$ with respect to the standard basis. Then for every $i\in\{1,\ldots,n-1\}$ we have
+    Let us define a linear mapping $g\colon\mathcal{V}\to\mathcal{B}\subseteq \mathcal{V}$ by the equation $g(x_i)=u_i$ for every $i\in\{1,\dots,n-1\}$, where $u_i$ is  such an element that $Ax_i+Bu_i=x_{i+1}$, and we define $g(x_n)$ arbitrarily. This definition is correct and unique since the vectors $x_i$ form a basis of $\mathcal{V}$ \citep[see][Tvrzení 6.4]{Barto}. Let $G$ be the matrix of the linear mapping $g$ with respect to the standard basis. Then for every $i\in\{1,\ldots,n-1\}$ we have
     $$(A+BG)x_i=Ax_i+BGx_i=Ax_i+Bu_i=x_{i+1}\ .$$
     It follows 
-    $$\mathcal{R}(A+BG,x_1)=\text{Im}(x_1,(A+BG)x_1,\ldots,(A+BG)^{n-1}x_1)=\text{Im}(x_1,x_2,\ldots,x_n)\ .$$
-    Finally, by linear independence of the vectors $x_1,\ldots,x_n$, it holds that $\text{dim}\mathcal{R}(A+BG,x_1)=n$. We have shown that the pair $\mathcal{R}(A+BG,Bv)$ is controllable, and thus the proof is concluded.
+    $$\mathbf{R}(A+BG,x_1)=(x_1|(A+BG)x_1|\cdots|(A+BG)^{n-1}x_1)=(x_1|x_2|\cdots|x_n)\ .$$
+    Finally, by the linear independence of the the vectors $x_1,\ldots,x_n$, it holds that $\text{dim}\mathcal{R}(A+BG,x_1)=n$. We have shown that the pair $\mathcal{R}(A+BG,Bv)$ is controllable, and thus the proof is concluded.
 \end{proof}
